[package]
name = "puzzle-supervillain"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false, features = [ "std" ] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }

rand_chacha = { version = "0.3.0", default-features = false }
sha2 = "0.10"

prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }

[[bin]]
name = "main"
path = "src/main.rs"